@@ -1,3 +1,7 @@
+Fri May 20 09:16:36 BST 2005 (njh)
+----------------------------------
+  * libclamav/pdf.c:	Ignore leading NL in FlateDecode messages
+
 Thu May 19 10:33:52 BST 2005 (njh)
 ----------------------------------
   * clamav-milter:	Used some of sendmail V8.13's features for sanity
